mdapi/Custom/objects/Property_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Premium_to_Future_Replace__c</fullName>
        <formula>IF((Sale_Price__c) &gt; 0,
Future_Replacement_Cost__c / Sale_Price__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount / (Premium) to Future Replace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Premium_to_Peak_Value__c</fullName>
        <formula>IF((Sale_Price__c) &gt; 0,
Previous_High_Value__c / Sale_Price__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount / (Premium) to Peak Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Down_Time_Est_UW__c</fullName>
        <label>Down Time Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_1__c</fullName>
        <label>Downtime Assumption (months) - Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_2__c</fullName>
        <label>Downtime Assumption (months) - Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_3__c</fullName>
        <label>Downtime Assumption (months) - Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drive_Report_Notes__c</fullName>
        <inlineHelpText>This field will be shared with Rehab and should contain information related to the Rehab Budget Est. @ UW.</inlineHelpText>
        <label>Drive Report Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drive_Report_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drive Report Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escrow_Amount__c</fullName>
        <label>Escrow Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Cancelled_Date__c</fullName>
        <label>Escrow Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Close_Date__c</fullName>
        <label>Escrow Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Expected_Close_Date__c</fullName>
        <label>Escrow Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escrow_Opened_Date__c</fullName>
        <label>Escrow Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Month__c</fullName>
        <label>Exit Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Year__c</fullName>
        <formula>Exit_Month__c/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Gross_Monthly_Rent_UW__c</fullName>
        <label>*Expected Gross Monthly Rent @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Annual_Rent_UW__c</fullName>
        <formula>Exp_Gross_Monthly_Rent_UW__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Annual Rent @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Inflation__c</fullName>
        <label>Expense Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fed_Ref__c</fullName>
        <label>Fed Ref #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <formula>TEXT(Proxy_Fund_01__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Replacement_Cost__c</fullName>
        <formula>IF(
ISNULL(Replacement_Cost_Est_UW_OLD__c),
null,
Replacement_Cost_Est_UW_OLD__c*((1+(Replacement_Cost_Inflation__c))^(Exit_Year__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Replacement Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_After_HOA__c</fullName>
        <formula>(( Expected_Gross_Annual_Rent_UW__c )-12*( Monthly_HOA_UW__c ))/( All_In_Cost_Est_UW__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Yield After HOA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_Est_UW__c</fullName>
        <formula>IF(All_In_Cost_Est_UW__c &gt; 0,
Expected_Gross_Annual_Rent_UW__c / All_In_Cost_Est_UW__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Yield = Expected Gross Annual Rent / All-In Cost Est.   Note:  The Gross Annual Rent should not include any offsets such as HOA fees.</inlineHelpText>
        <label>Gross Yield Est. @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Walk_Notes__c</fullName>
        <label>HD Budget Walk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HD_Budget_Walk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HD Budget Walk</label>
        <referenceTo>HD_Budget_Walk__c</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HOA_Master_Community__c</fullName>
        <formula>Residence__r.HOA_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the property has both a primary HOA and a master community and those records have been linked to this property&apos;s Residence record, this field will reflect the name of the Master Community. If you know that detail, please update on Residence record.</inlineHelpText>
        <label>HOA (Master Community)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Master_PrePay__c</fullName>
        <inlineHelpText>Please enter the amount that will be pre-paid to the HOA  Master Community via escrow.  This amount should be the amount that will be due for the remainder of the current fiscal year.  Please ensure that the HOA is entered on the related Residence record.</inlineHelpText>
        <label>HOA (Master) PrePay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Master_Prohibits_Leasing__c</fullName>
        <formula>Residence__r.HOA_Master_Prohibits_Leasing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this property is in a Master Community that we have on file and is associated to this property via the look-up field on the Residence object, this will reflect if the Master Community has strict bylaws that prohibit leasing.</inlineHelpText>
        <label>HOA Master Prohibits Leasing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Options__c</fullName>
        <formula>TEXT(Residence__r.HOA_Options__c)</formula>
        <label>*HOA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Phone__c</fullName>
        <formula>Residence__r.HOA_Phone__c</formula>
        <label>HOA Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Primary_PrePay__c</fullName>
        <inlineHelpText>Please enter the amount that will be pre-paid to the primary HOA via escrow.  This amount should be the amount that will be due for the remainder of the current fiscal year.  Please ensure that the HOA is entered on the Residence record.</inlineHelpText>
        <label>HOA (Primary) PrePay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Primary__c</fullName>
        <formula>Residence__r.HOA_Primary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If we have a record of the HOA in sf.com and it is associated with the Residence record related to this prospect, it will display here. (Note: to add an HOA, go to the Companies tab and select record type for &quot;Home Owner&apos;s Assoc.&quot;</inlineHelpText>
        <label>HOA (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Prohibits_Leasing__c</fullName>
        <formula>Residence__r.Prohibits_Leasing__c</formula>
        <inlineHelpText>If this property is in an HOA that we have on file and is associated to this property via the look-up field on the Residence object, this will reflect if the HOA has strict bylaws that prohibit leasing.</inlineHelpText>
        <label>HOA Prohibits Leasing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <formula>Residence__r.HOA__c</formula>
        <label>HOA Name @ UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPA_5_Year_CAGR__c</fullName>
        <label>HPA (5-Year CAGR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPA_Cumulative_Return__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
	Sale_Price__c / Market_Value_UW__c -1,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPA Cumulative Return</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IH_Agent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>PipelinesAgentContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IH_Approval_of_Home_Inspection_Date__c</fullName>
        <label>IH Approval of Home Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IH_Approval_of_Home_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IH Approval of Home Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IH_Broker_Deal_Accept_Date__c</fullName>
        <label>IH Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRS_Lien_Amount_Memo_Item__c</fullName>
        <inlineHelpText>This is the IRS lien on the individual as opposed to the property.  This amount is not factored into underwriting.</inlineHelpText>
        <label>IRS Lien Amount (Memo Item)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Lease_up_Cost_Est_UW__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, all values in this field were changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>IF(
        ISBLANK(Exp_Gross_Monthly_Rent_UW__c), 
        null,
	 ((0*(1-0.00)+Exp_Gross_Monthly_Rent_UW__c*0.00*(CASE (Fund__c, &apos;01&apos;, 0.00, &apos;02&apos;, 0.00, 0.00))))*0.00
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Lease-up Cost Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Period_End_Date__c</fullName>
        <label>Inspection Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Inspection_ID__c</fullName>
        <formula>Residence__r.Insurance_Inspection_ID__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Insurance Inspection ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Inspection_Notes__c</fullName>
        <formula>Residence__r.Insurance_Inspection_Notes__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Insurance Inspection Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>IF(
 AND(
 ISNULL(X12_Month_LIBOR__c), 
ISNULL(Spread__c)
 ),
 null,
 (
 IF(X12_Month_LIBOR__c &gt; 0, X12_Month_LIBOR__c, 0)
 +
 IF(Spread__c &gt; 0, Spread__c, 0)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Internal_Underwriting_Complete_Date__c</fullName>
        <label>Internal Underwriting Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPadlocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_1__c</fullName>
        <label>Lease Term (months) - Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_2__c</fullName>
        <label>Lease Term (months) - Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_3__c</fullName>
        <label>Lease Term (months) - Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liens_Fines_Est_UW__c</fullName>
        <label>*Liens/Fines Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing_Agent_Name__c</fullName>
        <label>Listing Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Agent_Phone__c</fullName>
        <label>Listing Agent Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Loan_Fees__c</fullName>
        <label>Loan Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_LTV__c</fullName>
        <label>Loan LTV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lot_Sq_Ft__c</fullName>
        <formula>Residence__r.Lot_Sq_Ft__c</formula>
        <label>*Lot Sq/Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Property_Tax_Est_Prcnt_UW__c</fullName>
        <label>Property Tax Est. % @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M2_Property_Tax_Est_UW__c</fullName>
        <formula>M2_Property_Tax_Est_Prcnt_UW__c * Contract_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Tax Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Special_Assessment_Expense_Est_UW__c</fullName>
        <label>Special Assessment Exp. Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailbox_No__c</fullName>
        <formula>Residence__r.Mailbox_No__c</formula>
        <label>Mailbox No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value_PSF_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
Market_Value_UW__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Value_UW__c</fullName>
        <label>*Market Value @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Bid_Price__c</fullName>
        <label>*Max Bid Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merge_Date__c</fullName>
        <description>Applied when Residences are merged and Pipeline is reassociated with another Residence</description>
        <label>Merge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modified_Gross_Yield__c</fullName>
        <description>Expected Gross Annual Rent @ UW / (Contract Price + Rehab Budget Est. @ UW + Broker Expense @ UW)</description>
        <formula>Expected_Gross_Annual_Rent_UW__c / (Contract_Price__c + Rehab_Budget_Est_UW__c + Broker_Expense_Est_UW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Gross Annual Rent @ UW / (Contract Price + Rehab Budget Est. @ UW + Broker Expense @ UW)</inlineHelpText>
        <label>Modified Gross Yield</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_UW__c</fullName>
        <label>Monthly HOA @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Pipeline__c</fullName>
        <formula>IF( $User.Brokerage__c  =   Brokerage__r.Name   &amp;&amp;  NOT( ISBLANK( $User.Brokerage__c ) ) , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>My Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Closing_Amount__c</fullName>
        <formula>IF( ISBLANK(Escrow_Amount__c) ,  Contract_Price__c ,  Contract_Price__c  -  Escrow_Amount__c )</formula>
        <label>Net Closing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Contract_Escrow__c</fullName>
        <description>This field will not be on the page layout.  It is on the prospect and pipeline page to be used in reports to assist with cash forecasting.  (Added by JH on 1.26)</description>
        <formula>Contract_Price__c - Escrow_Amount__c</formula>
        <label>Net Contract - Escrow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Sale_Price_PSF__c</fullName>
        <formula>IF((Square_Feet__c) &gt; 0,
Net_Sale_Price__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sale Price PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Sale_Price__c</fullName>
        <formula>IF(
	AND(
		ISNULL(Sale_Price__c ), 
		ISNULL(Selling_Costs__c)
	),
	null,
	(
		IF(Sale_Price__c  &gt; 0, Sale_Price__c, 0)
		+
		IF(Selling_Costs__c &gt; 0, Selling_Costs__c, 0)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupied_Status_Acquisition__c</fullName>
        <inlineHelpText>Occupancy status at Acquisition.  If the property is occupied but the resident will move out prior to the acquisition date, the the property should be considered &quot;Vacant&quot;.</inlineHelpText>
        <label>*Occupied Status @ Acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Occupied</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Purchased Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <inlineHelpText>If there is an Offer Date, it determines the Fund.  Therefore, please be certain the date is correct before reporting the property.</inlineHelpText>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <label>Offer Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Closing_Costs_Est_UW__c</fullName>
        <label>*Other Closing Costs Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Income_Inflation__c</fullName>
        <label>Other Income Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pipeline (Owner Entity)</relationshipLabel>
        <relationshipName>OwnerEntityPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Pipeline</label>
        <referenceTo>Property_Opportunity__c</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>Parent_Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <formula>TEXT(Residence__r.Parking__c)</formula>
        <label>Parking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Common_Element__c</fullName>
        <inlineHelpText>Represents the percent ownership in the common elements for a condo property.</inlineHelpText>
        <label>% Common Element</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pipeline_Add_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Proxy_Pipeline_Add_Date__c)),Proxy_Pipeline_Add_Date__c,
IF( NOT(ISBLANK(Prospect__c)), CreatedDate, null))</formula>
        <label>Pipeline Add Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pipeline_Removed_Date__c</fullName>
        <label>Pipeline Removed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Platform_Buildup_Allocation__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)) &amp;&amp; DATEVALUE(Prospect__r.CreatedDate) &lt; DATE(2017,2,1) &amp;&amp; IsConverted__c &amp;&amp; DATEVALUE(Acquisition_Reporting__r.CreatedDate) &lt; Date(2017,2,23),
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*(CASE (Fund__c, &apos;01&apos;, 0.0528,&apos;02&apos;, 0.0485, &apos;03&apos;, 0.0488, &apos;04&apos;, 0.0461, &apos;05&apos;, 0.0316, &apos;06&apos; , 0.0316 , 0.0316)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Buildup Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pool__c</fullName>
        <formula>TEXT(Residence__r.Pool__c)</formula>
        <label>Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_High_Date__c</fullName>
        <inlineHelpText>If you know the year but not an exact date, the default should be June 30.</inlineHelpText>
        <label>Previous High Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_High_Value_PSF__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
Previous_High_Value__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous High Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_High_Value__c</fullName>
        <label>*Previous High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Residence__r.Address_City__c</formula>
        <label>*Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Code_Preacquisition__c</fullName>
        <label>Property Code PreAcquisition</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <formula>Residence__r.County__c</formula>
        <label>*County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Cross_Streets__c</fullName>
        <formula>Residence__r.Cross_Streets__c</formula>
        <label>Property Cross Streets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <externalId>true</externalId>
        <label>Property ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property_MLS_Number__c</fullName>
        <description>Multiple Listing Service #</description>
        <inlineHelpText>Multiple Listing Service #</inlineHelpText>
        <label>MLS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Notes_UW__c</fullName>
        <inlineHelpText>Property Notes at Underwriting should contain notes intended to remain with the property record and will be visible post-acquisition to downstream IH teams.</inlineHelpText>
        <label>Property Notes @ UW</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Residence__r.Address_State__c</formula>
        <label>*Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>Residence__r.Address_Street__c</formula>
        <label>*Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>TEXT(Residence__r.Property_Type__c)</formula>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <formula>Residence__r.Address_Zip_Code__c</formula>
        <label>*Property Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect</label>
        <referenceTo>Prospect__c</referenceTo>
        <relationshipLabel>Pipeline Record with Acquisition Details</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proxy_Fund_01__c</fullName>
        <description>This is a proxy field used to override special instances for the Fund field on Pipeline and Portfolio.</description>
        <inlineHelpText>To change the Fund, enter the correct Fund into this field.  Upon saving, the Fund field will reflect that value.</inlineHelpText>
        <label>Manual Fund Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proxy_Pipeline_Add_Date__c</fullName>
        <description>This field holds a value from the Historic_Pipeline_Addhistoric pipeline (Excel tracker) that was updated as part of the deployment.  Since these records weren&apos;t actually converted to Pipe through sf.com, the Pipeline Add formula will populate with this field if it has a value.</description>
        <label>Proxy Pipeline Add Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_as_prcnt_Peak__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0, Closing_Price__c / Previous_High_Value__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price as a % of Peak</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_as_prct_Replacement_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_OLD__c &gt; 0, Closing_Price__c / Replacement_Cost_Est_UW_OLD__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price % of Replacement @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RES_sys_ID__c</fullName>
        <formula>Residence__r.Id</formula>
        <label>RES Sys ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Lookup</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>